--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
            email = "r.jeksterslab@gmail.com",
            comment = c(ORCID = "0000-0003-4818-8420"))
 Description: Generates nonparametric bootstrap confidence intervals
-    (Efron & Tibshirani, 1993: <doi:10.1201/9780429246593>)
+    (Efron and Tibshirani, 1993: <doi:10.1201/9780429246593>)
     for standardized regression coefficients (beta) and other effect sizes,
     including multiple correlation, semipartial correlations,
     improvement in R-squared, squared partial correlations,
@@ -26,7 +26,7 @@ Imports: stats
 Suggests: knitr, rmarkdown, testthat
 RoxygenNote: 7.3.2
 NeedsCompilation: no
-Packaged: 2024-08-25 23:07:03 UTC; root
+Packaged: 2024-10-01 22:11:03 UTC; root
 Author: Ivan Jacob Agaloos Pesigan [aut, cre, cph]
     (<https://orcid.org/0000-0003-4818-8420>)
 Maintainer: Ivan Jacob Agaloos Pesigan <r.jeksterslab@gmail.com>
