--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: betaNB
 Title: Bootstrap for Regression Effect Sizes
-Version: 1.0.5.9000
+Version: 1.0.6
 Authors@R: 
     person(given = "Ivan Jacob Agaloos",
            family = "Pesigan",
@@ -26,7 +26,7 @@ Imports: stats
 Suggests: knitr, rmarkdown, testthat
 RoxygenNote: 7.3.2
 NeedsCompilation: no
-Packaged: 2025-01-13 07:24:20 UTC; root
-Author: Ivan Jacob Agaloos Pesigan [aut, cre, cph]
-    (<https://orcid.org/0000-0003-4818-8420>)
+Packaged: 2025-07-22 19:28:27 UTC; root
+Author: Ivan Jacob Agaloos Pesigan [aut, cre, cph] (ORCID:
+    <https://orcid.org/0000-0003-4818-8420>)
 Maintainer: Ivan Jacob Agaloos Pesigan <r.jeksterslab@gmail.com>
